resolved fdo#41166 match month and day name word instead of substring

Change-Id: I897dbcee47de574d91ba3e3b40a39a35b779fef8